feat: Enable execution of scripts for a cluster

--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -21,10 +21,25 @@ cluster:
     sgBackupConfig: backupconf
   distributedLogs:
     sgDistributedLogs: distributedlogs
-  #initialData:
-  #  restore:
+  #restore:
+  #  initialData:
   #    fromBackup:
   #    downloadDiskConcurrency:
+  #  scripts:
+  #  - name: create user
+  #    scriptFrom:
+  #      secretKeyRef: # read the user from a Secret to maintain credentials in a safe place
+  #        name: stackgres-secret-sqls-scripts
+  #        key: create-stackgres-user.sql
+  #  - name: create database
+  #    script: |
+  #      CREATE DATABASE stackgres WITH OWNER stackgres;
+  #  - name: create stackgres table
+  #    database: stackgres
+  #    scriptFrom:
+  #      configMapKeyRef: # read long script from a ConfigMap to avoid have to much data in the helm releasea and the sgcluster CR
+  #        name: stackgres-sqls-scripts
+  #        key: create-stackgres-table.sql
   prometheusAutobind: true
 
 instanceProfiles:
