--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGCluster.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGCluster.yaml
@@ -125,6 +125,57 @@ spec:
                       minimum: 1
                       description: |
                         The backup fetch process may fetch several streams in parallel. Specify a value larger than one for parallel fetching.
+                scripts:
+                  type: array
+                  description: |
+                    A list of SQL scripts that will be executed once in secuence when the database bootstrap and after restore is completed
+                  items:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        description: |
+                          The name of the script.
+                      database:
+                        type: string
+                        description: |
+                          The database where the script will be executed.
+                      script:
+                        type: string
+                        description: |
+                          The SQL script to execute. This field is mutually exclusive with `scriptFrom` field.
+                      scriptFrom:
+                        type: object
+                        description: |
+                          Reference that contains the SQL script to execute. This field is mutually exclusive with `script` field.
+                        properties:
+                          secretKeyRef:
+                            type: object
+                            description: |
+                              A Secret key reference that contains the SQL script to execute. This field is mutually exclusive with `configMapKeyRef` field.
+                            properties:
+                              name:
+                                type: string
+                                description: |
+                                  The name of the Secret that contains the SQL script to execute.
+                              key:
+                                type: string
+                                description: |
+                                  The key of the Secret that contains the SQL script to execute.
+                          configMapKeyRef:
+                            type: object
+                            description: |
+                              A ConfigMap key reference that contains the SQL script to execute. This field is mutually exclusive with `secretKeyRef` field.
+                            properties:
+                              name:
+                                type: string
+                                description: |
+                                  The name of the ConfigMap that contains the SQL script to execute.
+                              key:
+                                type: string
+                                description: |
+                                  The key of the ConfigMap that contains the SQL script to execute.
+                    required: ["name"]
             prometheusAutobind:
               type: boolean
               description: |
