feat: Enable execution of scripts for a cluster

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
@@ -32,7 +32,7 @@ spec:
   {{- if .Values.cluster.initialData.scripts }}
     scripts:
   {{- range .Values.cluster.initialData.scripts }}
-      name: {{ .name }}
+    - name: {{ .name }}
       {{- if .database }}
       database: {{ .database }}
       {{- end }}
