--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -26,20 +26,20 @@ cluster:
   #    fromBackup:
   #    downloadDiskConcurrency:
   #  scripts:
-  #  - name: create user
+  #  - name: create-stackgres-user
   #    scriptFrom:
   #      secretKeyRef: # read the user from a Secret to maintain credentials in a safe place
   #        name: stackgres-secret-sqls-scripts
   #        key: create-stackgres-user.sql
-  #  - name: create database
+  #  - name: create-stackgres-database
   #    script: |
   #      CREATE DATABASE stackgres WITH OWNER stackgres;
-  #  - name: create stackgres table
+  #  - name: create-stackgres-schema
   #    database: stackgres
   #    scriptFrom:
   #      configMapKeyRef: # read long script from a ConfigMap to avoid have to much data in the helm releasea and the sgcluster CR
   #        name: stackgres-sqls-scripts
-  #        key: create-stackgres-table.sql
+  #        key: create-stackgres-schema.sql
   prometheusAutobind: true
 
 instanceProfiles:
