--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGCluster.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGCluster.yaml
@@ -134,9 +134,8 @@ spec:
                     properties:
                       name:
                         type: string
-                        pattern: '[-._a-zA-Z0-9]+'
                         description: |
-                          The name of the script that have to follow the same syntax rules of a configmap key ([-._a-zA-Z0-9]+).
+                          The name of the script.
                       database:
                         type: string
                         description: |
