--- a/stackgres-k8s/src/operator/src/main/resources/postgresql-blacklist.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/postgresql-blacklist.properties
@@ -1,25 +1,19 @@
-listen_addresses
-port
-cluster_name
-hot_standby
-fsync
-full_page_writes
-logging_collector
-log_destination
-log_directory
-log_filename
-log_rotation_age
-log_rotation_size
-log_truncate_on_rotation
-syslog_facility
-syslog_ident
-syslog_sequence_numbers
-syslog_split_messages
-event_source
-max_replication_slots
-max_wal_senders
-wal_keep_segments
-wal_level
-wal_log_hints
-archive_mode
-archive_command
+listen_addresses=localhost
+port=5435
+hot_standby=on
+fsync=on
+logging_collector=off
+log_destination=stderr
+log_directory=log
+log_filename=postgres-%M.log
+log_rotation_age=30min
+log_rotation_size=0
+log_truncate_on_rotation=on
+wal_level=logical
+track_commit_timestamp=on
+wal_log_hints=on
+archive_mode=on
+archive_command=/bin/true
+lc_messages=C
+wal_compression=on
+huge_pages=off
