--- a/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
@@ -1,12 +1,24 @@
 checkpoint_completion_target=0.9
 checkpoint_timeout=15min
-default_statistics_target=250
-wal_compression=on
-lc_messages=C
-random_page_cost=2.0
-track_activity_query_size=2048
-huge_pages=off
-shared_preload_libraries=pg_stat_statements
-track_io_timing=on
+default_statistics_target=200
+random_page_cost=1.5
+shared_preload_libraries=pg_stat_statements, auto_explain
+track_activity_query_size=4096
 track_functions=pl
-extra_float_digits=1
+track_io_timing=on
+enable_partitionwise_aggregate=on
+enable_partitionwise_join=on
+pg_stat_statements.track_utility=off
+superuser_reserved_connections=8
+work_mem=10MB
+maintenance_work_mem=2GB
+max_prepared_transactions=32
+max_locks_per_transaction=128
+max_pred_locks_per_transaction=128
+min_wal_size=1GB
+max_wal_size=2GB
+max_replication_slots=20
+max_wal_senders=20
+wal_keep_segments=100
+autovacuum_max_workers=3
+autovacuum_vacuum_cost_delay=2
