--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -194,6 +194,20 @@ build native image:
       - $DO_DEPLOY
       - $DO_NATIVE
 
+build ui image:
+  image: docker.io/ongres/builder:latest
+  stage: pre test
+  tags:
+    - stackgres-runner
+  dependencies:
+    - compile
+  timeout: 12 hour
+  retry: 2
+  script:
+    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
+    - 'export ADMIN_IMAGE_NAME="stackgres/admin-ui:$IMAGE_TAG"'
+    - ( cd stackgres-k8s/src; sh admin-ui/buildah/build.sh )
+
 integration test:
   stage: test
   tags:
@@ -382,6 +396,24 @@ deploy native image:
     - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $OPERATOR_IMAGE_NAME "docker://docker.io/$OPERATOR_IMAGE_UPLOAD_NAME"'
     - 'buildah pull docker-daemon:"$RESTAPI_IMAGE_NAME"'
     - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $RESTAPI_IMAGE_NAME "docker://docker.io/$RESTAPI_IMAGE_UPLOAD_NAME"'
+  only:
+    variables:
+      - $CI_COMMIT_REF_NAME == "development"
+      - $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
+      - $DO_DEPLOY
+
+deploy adminui image:
+  image: docker.io/ongres/builder:latest
+  stage: deploy
+  tags:
+    - stackgres-runner
+  script:
+    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
+    - 'export IMAGE_UPLOAD_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_REF_NAME"}"'
+    - 'export ADMINUI_IMAGE_NAME="stackgres/admin-ui:$IMAGE_TAG"'
+    - 'export ADMINUI_IMAGE_UPLOAD_NAME="stackgres/admin-ui:$IMAGE_UPLOAD_TAG"'
+    - 'buildah pull docker-daemon:"$ADMINUI_IMAGE_NAME"'
+    - 'buildah push --format=docker --authfile $REGISTRY_AUTH_FILE $ADMINUI_IMAGE_NAME "docker://docker.io/$ADMINUI_IMAGE_UPLOAD_NAME"'
   only:
     variables:
       - $CI_COMMIT_REF_NAME == "development"
