ci: override pulled images for e2e tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -239,7 +239,7 @@ integration test:
     paths:
     - stackgres-k8s/src/operator/target/e2e
 
-e2e tests jvm image:
+e2e tests jvm image part 1:
   stage: test
   tags:
     - stackgres-runner
@@ -247,16 +247,49 @@ e2e tests jvm image:
     - compile
   variables:
     OPERATOR_IN_KUBERNETES: "true"
-    K8S_SUFFIX: jvm-image
+    K8S_SUFFIX: jvm-image-1
+    E2E_PULLED_IMAGES_PATH: /tmp/pulled-images-jvm-image-1
   timeout: 12 hour
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export E2E_RUN_ONLY="non_exclusive"'
+    - 'export E2E_RUN_ONLY="non_exclusive:0/2"'
     - |
       flock -s /tmp/stackgres-build-native \
-        flock /tmp/stackgres-integration-test-jvm-image \
+        flock /tmp/stackgres-integration-test-jvm-image-1 \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS verify -P integration \
+          -DargLine=-Dcom.ongres.junit.docker.runnerId="$K8S_SUFFIX" \
+          -Dit.skipBuildContainer=true
+  only:
+    variables:
+      - $SKIP_E2E != "true"
+  artifacts:
+    expire_in: 1 week
+    when: always
+    paths:
+    - stackgres-k8s/src/operator/target/e2e
+
+e2e tests jvm image part 2:
+  stage: test
+  tags:
+    - stackgres-runner
+  dependencies:
+    - compile
+  variables:
+    OPERATOR_IN_KUBERNETES: "true"
+    K8S_SUFFIX: jvm-image-2
+    E2E_PULLED_IMAGES_PATH: /tmp/pulled-images-jvm-image-2
+  timeout: 12 hour
+  script:
+    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
+    - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
+    - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
+    - 'export E2E_RUN_ONLY="non_exclusive:1/2"'
+    - |
+      flock -s /tmp/stackgres-build-native \
+        flock /tmp/stackgres-integration-test-jvm-image-2 \
         timeout -s KILL 3600 \
         mvn $MAVEN_CLI_OPTS verify -P integration \
           -DargLine=-Dcom.ongres.junit.docker.runnerId="$K8S_SUFFIX" \
@@ -279,6 +312,7 @@ e2e exclusive tests jvm image:
   variables:
     OPERATOR_IN_KUBERNETES: "true"
     K8S_SUFFIX: jvm-image-exclusive
+    E2E_PULLED_IMAGES_PATH: /tmp/pulled-images-jvm-image-exclusive
   timeout: 12 hour
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
@@ -301,7 +335,7 @@ e2e exclusive tests jvm image:
     paths:
     - stackgres-k8s/src/operator/target/e2e
 
-e2e tests native image:
+e2e tests native image part 1:
   stage: test
   tags:
     - stackgres-runner
@@ -309,17 +343,55 @@ e2e tests native image:
     - compile
   variables:
     OPERATOR_IN_KUBERNETES: "true"
-    K8S_SUFFIX: native-image
+    K8S_SUFFIX: native-image-1
+    E2E_PULLED_IMAGES_PATH: /tmp/pulled-images-native-image-1
     SKIP_QUARKUS_TEST: "true"
   timeout: 12 hour
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
     - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
-    - 'export E2E_RUN_ONLY="non_exclusive"'
+    - 'export E2E_RUN_ONLY="non_exclusive:0/2"'
     - |
       flock -s /tmp/stackgres-build-native \
-        flock /tmp/stackgres-integration-test-native-image \
+        flock /tmp/stackgres-integration-test-native-image-1 \
+        timeout -s KILL 3600 \
+        mvn $MAVEN_CLI_OPTS verify -P integration \
+          -DargLine=-Dcom.ongres.junit.docker.runnerId="$K8S_SUFFIX" \
+          -Dit.skipBuildContainer=true
+  only:
+    variables:
+      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "development"
+      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
+      - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
+      - $DO_DEPLOY
+      - $DO_NATIVE
+  artifacts:
+    expire_in: 1 week
+    when: always
+    paths:
+    - stackgres-k8s/src/operator/target/e2e
+
+e2e tests native image part 2:
+  stage: test
+  tags:
+    - stackgres-runner
+  dependencies:
+    - compile
+  variables:
+    OPERATOR_IN_KUBERNETES: "true"
+    K8S_SUFFIX: native-image-2
+    E2E_PULLED_IMAGES_PATH: /tmp/pulled-images-native-image-2
+    SKIP_QUARKUS_TEST: "true"
+  timeout: 12 hour
+  script:
+    - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
+    - 'export OPERATOR_IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
+    - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
+    - 'export E2E_RUN_ONLY="non_exclusive:1/2"'
+    - |
+      flock -s /tmp/stackgres-build-native \
+        flock /tmp/stackgres-integration-test-native-image-2 \
         timeout -s KILL 3600 \
         mvn $MAVEN_CLI_OPTS verify -P integration \
           -DargLine=-Dcom.ongres.junit.docker.runnerId="$K8S_SUFFIX" \
@@ -346,6 +418,7 @@ e2e exclusive tests native image:
   variables:
     OPERATOR_IN_KUBERNETES: "true"
     K8S_SUFFIX: native-image-exclusive
+    E2E_PULLED_IMAGES_PATH: /tmp/pulled-images-native-image-exclusive
     SKIP_QUARKUS_TEST: "true"
   timeout: 12 hour
   script:
