--- a/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
@@ -22,3 +22,22 @@ max_wal_senders=20
 wal_keep_segments=100
 autovacuum_max_workers=3
 autovacuum_vacuum_cost_delay=2
+listen_addresses=localhost
+port=5435
+hot_standby=on
+fsync=on
+logging_collector=off
+log_destination=stderr
+log_directory=log
+log_filename=postgres-%M.log
+log_rotation_age=30min
+log_rotation_size=0
+log_truncate_on_rotation=on
+wal_level=logical
+track_commit_timestamp=on
+wal_log_hints=on
+archive_mode=on
+archive_command=/bin/true
+lc_messages=C
+wal_compression=on
+huge_pages=off
