feat: extract timeline from startWalFile

--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
@@ -135,6 +135,10 @@ spec:
                   type: string
                   description: |
                     The WAL segment file name when backup was started.
+                timeline:
+                  type: string
+                  description: |
+                    The backup timeline.
                 controlData:
                   type: object
                   description: |
