--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -274,36 +274,36 @@ integration test:
     paths:
     - stackgres-k8s/src/operator/target/e2e
 
-e2e tests jvm image part 1:
-  extends: .e2e tests jvm image
-  variables:
-    E2E_RUN_BATCH_INDEX: 0
-    E2E_RUN_BATCH_COUNT: 3
-
-e2e tests jvm image part 2:
+e2e tests jvm image part 1/3:
   extends: .e2e tests jvm image
   variables:
     E2E_RUN_BATCH_INDEX: 1
     E2E_RUN_BATCH_COUNT: 3
 
-e2e tests jvm image part 3:
+e2e tests jvm image part 2/3:
   extends: .e2e tests jvm image
   variables:
     E2E_RUN_BATCH_INDEX: 2
     E2E_RUN_BATCH_COUNT: 3
 
-e2e exclusive tests jvm image part 1:
+e2e tests jvm image part 3/3:
   extends: .e2e tests jvm image
   variables:
-    E2E_RUN_BATCH_INDEX: 0
+    E2E_RUN_BATCH_INDEX: 3
+    E2E_RUN_BATCH_COUNT: 3
+
+e2e exclusive tests jvm image part 1/2:
+  extends: .e2e tests jvm image
+  variables:
+    E2E_RUN_BATCH_INDEX: 1
     E2E_RUN_BATCH_COUNT: 2
     E2E_EXTRA_SUFFIX: "-exclusive"
     E2E_RUN_ONLY: exclusive
 
-e2e exclusive tests jvm image part 2:
+e2e exclusive tests jvm image part 2/2:
   extends: .e2e tests jvm image
   variables:
-    E2E_RUN_BATCH_INDEX: 1
+    E2E_RUN_BATCH_INDEX: 2
     E2E_RUN_BATCH_COUNT: 2
     E2E_EXTRA_SUFFIX: "-exclusive"
     E2E_RUN_ONLY: exclusive
@@ -348,36 +348,36 @@ e2e exclusive tests jvm image part 2:
     paths:
     - stackgres-k8s/src/operator/target/e2e
 
-e2e tests native image part 1:
-  extends: .e2e tests native image
-  variables:
-    E2E_RUN_BATCH_INDEX: 0
-    E2E_RUN_BATCH_COUNT: 3
-
-e2e tests native image part 2:
+e2e tests native image part 1/3:
   extends: .e2e tests native image
   variables:
     E2E_RUN_BATCH_INDEX: 1
     E2E_RUN_BATCH_COUNT: 3
 
-e2e tests native image part 3:
+e2e tests native image part 2/3:
   extends: .e2e tests native image
   variables:
     E2E_RUN_BATCH_INDEX: 2
     E2E_RUN_BATCH_COUNT: 3
 
-e2e exclusive tests native image part 1:
+e2e tests native image part 3/3:
   extends: .e2e tests native image
   variables:
-    E2E_RUN_BATCH_INDEX: 0
+    E2E_RUN_BATCH_INDEX: 3
+    E2E_RUN_BATCH_COUNT: 3
+
+e2e exclusive tests native image part 1/2:
+  extends: .e2e tests native image
+  variables:
+    E2E_RUN_BATCH_INDEX: 1
     E2E_RUN_BATCH_COUNT: 2
     E2E_EXTRA_SUFFIX: "-exclusive"
     E2E_RUN_ONLY: exclusive
 
-e2e exclusive tests native image part 2:
+e2e exclusive tests native image part 2/2:
   extends: .e2e tests native image
   variables:
-    E2E_RUN_BATCH_INDEX: 1
+    E2E_RUN_BATCH_INDEX: 2
     E2E_RUN_BATCH_COUNT: 2
     E2E_EXTRA_SUFFIX: "-exclusive"
     E2E_RUN_ONLY: exclusive
