--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-nginx-configmap.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-nginx-configmap.yaml
@@ -5,6 +5,32 @@ metadata:
   name: {{ .Values.restapi.name }}-nginx
   namespace: {{ .Release.Namespace }}
 data:
+  nginx.conf: |
+    pid        /tmp/nginx.pid;
+    events{
+    }
+    http {
+        client_body_temp_path /tmp/client_temp;
+        proxy_temp_path       /tmp/proxy_temp_path;
+        fastcgi_temp_path     /tmp/fastcgi_temp;
+        uwsgi_temp_path       /tmp/uwsgi_temp;
+        scgi_temp_path        /tmp/scgi_temp;
+
+        include       /etc/nginx/mime.types;
+        default_type  application/octet-stream;
+
+        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for"';
+
+        access_log  /var/log/nginx/access.log  main;
+
+        sendfile        on;
+        
+        keepalive_timeout  65;
+
+        include /etc/nginx/conf.d/*.conf;
+    }
   stackgres-operator.template: |
     server {
       set $grafana_embedded '${GRAFANA_EMBEDDED}';
@@ -14,7 +40,17 @@ data:
       listen       9443 ssl;
       ssl_certificate         /etc/operator/certs/server.crt;
       ssl_certificate_key     /etc/operator/certs/root.key;
-      
+      root   /usr/share/nginx/html;
+      index index.html;
+ 
+      location /admin/ {
+        try_files $uri $uri/index.html /admin/index.html;
+      }
+
+      location ~ ^(/|/admin|/admin/)$ {
+        return 302 "$scheme://$http_host/admin/index.html";
+      }
+
       location /grafana {
         if ($grafana_embedded != true) {
           return 404;
@@ -24,7 +60,7 @@ data:
       }
       
       location ~ ^(/|/stackgres|/stackgres/)$ {
-        return 302 "$scheme://$http_host/stackgres/index.html";
+        return 302 "$scheme://$http_host/admin/index.html";
       }
       
       location ~ ^/stackgres {
